<resources>
    <string name="app_name" translatable="false">Choice of University</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="next2" translatable="false">next2</string>
    <string name="log_in" translatable="false">Log in</string>
    <string name="register" translatable="false">Register</string>
    <string name="mainName" translatable="false">Выбери университет своей мечты</string>
    <string name="emailaddress" translatable="false">EmailAddress</string>
    <string name="password" translatable="false">Password</string>
    <string name="error_reg_1" translatable="false"><![CDATA[email address must contain <@> and <.>]]></string>
    <string name="error_reg_2" translatable="false">Password length must be greater than 6</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="favourites" translatable="false">Favourites</string>
    <string name="log_out" translatable="false">Log Out</string>
    <string name="search" translatable="false">Search</string>
    <string name="university" translatable="false">University</string>
    <string name="add_to_favorite" translatable="false">Add to favorite</string>
    <string name="go_back" translatable="false">Go back</string>
    <string name="home" translatable="false">Home</string>
</resources>