<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".Fragment.SecondFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn2"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="201dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#E1B87A"
        android:text="@string/log_in"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPassword2" />

    <EditText
        android:id="@+id/TextEmail2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="284dp"
        android:backgroundTint="@color/backTint"
        android:ems="10"
        android:hint="@string/emailaddress"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#FF1100"
        app:layout_constraintBottom_toTopOf="@+id/TextEmail2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.532"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp" />


    <EditText
        android:id="@+id/TextPassword2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/backTint"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextEmail2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="157dp"
        android:layout_height="68dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="96dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/log_in"
        android:textColor="#090505"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TextEmail2"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/button"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:backgroundTint="@color/back"
        android:drawableLeft="@drawable/arrowback"
        android:text=""

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>